k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-budget
  namespace: simple-budget
  labels:
    app.kubernetes.io/name: simple-budget
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-budget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-budget
      annotations:
        lastDeployed: "2023-10-07:12:49Z"
    spec:
      containers:
        - name: simple-budget
          image: simple-budget:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
