k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  namespace: simple-budget
  labels:
    app.kubernetes.io/name: postgresql
spec:
  containers:
    - name: postgresql
      image: postgres:alpine
      ports:
        - containerPort: 5432
