k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-budget-headless
  namespace: simple-budget
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: simple-budget
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  selector:
    app.kubernetes.io/name: simple-budget
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: simple-budget
spec:
  selector:
    app.kubernetes.io/name: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
