k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  ingressClassName: nginx
  rules:
    - host: simple-budget.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-budget
                port:
                  number: 4000
